--- a/WeatherApp/Apps/Weather.Android/Resources/layout/main_layout.axml
+++ b/WeatherApp/Apps/Weather.Android/Resources/layout/main_layout.axml
@@ -9,20 +9,29 @@
         layout="@layout/toolbar_actionbar" />
     <fragment
         class="Weather.AndroidApp.Fragments.CityWeatherCardFragment"
-        android:id="@+id/select"
+        android:id="@+id/cityWeatherFragment"
         android:elevation="2dp"
         android:layout_margin="@dimen/md_keylines"
         android:padding="@dimen/md_keylines"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
-    <ProgressBar
+        android:layout_height="wrap_content"/>
+
+  <fragment
+        class="Weather.AndroidApp.Fragments.CityForecatsCardFragment"
+        android:id="@+id/cityForecastFragment"
+        android:elevation="2dp"
+        android:layout_margin="@dimen/md_keylines"
+        android:padding="@dimen/md_keylines"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+  <ProgressBar
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:gravity="center"
         android:layout_gravity="center"
         android:indeterminate="true"
         style="@style/ProgressBarStyle"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:id="@+id/progressBarLoading" />
 </LinearLayout>
